# flexcache

./: .gitignore  LICENSE  Makefile  Readme.md  pyproject.toml  setup.py
benchmarks/: conftest.py  pure_python_cache.py  test_benchmark.py
flexcache/: __init__.py  __init__.pyi
src/: Makefile  bcache.h  flexcache.c  flexcache.h  flexcache.py  flexcache_policy_fifo.c  flexcache_policy_fifo.h  flexcache_policy_lru.c  flexcache_policy_lru.h  flexcache_policy_random.c  flexcache_policy_random.h  flexcache_python.c
src/tests/: test_bcache.c  test_flexcache_core.c  test_flexcache_ttl.c  test_helpers.h  test_main.c
tests/: test_main.py  test_run.py
