# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexcache"
version = "0.1.0"
description = "Fast in-memory cache with TTL and pluggable eviction policies"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"  # formato novo SPDX
authors = [
    {name = "RodBell"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cache", "lru", "fifo", "ttl", "memory"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[project.urls]
Homepage = "https://github.com/rodbell/flexcache"
Repository = "https://github.com/rodbell/flexcache"

[tool.setuptools]
packages = ["flexcache"]